# tracking-gov-pr

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.amass/: domains.txt
.github/workflows/: data.yml  deploy.yml  lint.yml
data/: agencies.json  amass-enum.jsonl  towns.json
data/checks/: 2022101511.json  2022101700.json  2022102400.json  2022103100.json  2022110700.json  2022111400.json  2022112100.json  2022112800.json  2022120500.json  2022121200.json  2022121900.json  2022122600.json  2023010200.json  2023010900.json  2023011600.json  2023012300.json  2023013000.json  2023020600.json  2023021300.json  2023022000.json  2023022700.json  2024050512.json  2024050600.json  2024051300.json  2024052000.json  2024052700.json  2024060300.json  2024061000.json  2024061700.json  2024062400.json  2024070100.json  2024070800.json  2024071500.json  2024072200.json  2024072900.json  2024080500.json  2024081200.json  2024081900.json  2024082600.json  2024090200.json  (+21 more)
datasette/: data.db  metadata.json
scripts/: enum-gov-pr.sh
src/: __main__.py  agencies.py  checks.py  scrape.py  towns.py
