[tool.poetry]
name = "tracking-gov-pr"
version = "0.0.1"
description = "Tracking gov.pr"
authors = ["Jose Padilla <hello@jpadilla.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
tracking-gov-pr = 'src.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
parsel = "^1.6.0"
requests = "^2.28.1"
datasette = "^0.62"
sqlite-utils = "^3.29"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
seed-isort-config = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
atomic = true
src_paths = ["src"]
